<resources>
    <string name="app_name">TestLoveApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_activity_registrar">Registrar</string>
    <string name="title_activity_ventana_dialogo">VentanaDialogo</string>
    <string name="title_activity_ventana_respuesta">VentanaRespuesta</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="actionBar_agregarPregunta">Agregar pregunta</string>
    <string name="actionBar_eliminarPregunta">Eliminar pregunta</string>
    <string name="actionBar_modificarPregunta">Modificar pregunta</string>
    <string name="actionBar_eliminarContacto">Eliminar contacto</string>
    <string name="actionBar_opciones">Opciones</string>
    <string name="actionBar_salir">Cerrar sesion</string>
    <string name="actionBar_pendientes">Pendientes</string>
    <string name="title_activity_pendiente">Pendiente</string>
    <string name="menu_nav_view_solicitudesenviadas">Solicitudes enviadas</string>
    <string name="menu_nav_view_solicitudesrecibidas">Solicitudes recibidas</string>
    <string name="menu_nav_view_solicitudescontestadas">Solicitudes contestadas</string>
    <string name="menu_nav_view_preguntasenviadas">Preguntas enviadas</string>
    <string name="menu_nav_view_preguntasrecibidas">Preguntas recibidas</string>
    <string name="menu_nav_view_preguntascontestadas">Preguntas contestadas</string>
    <string name="menu_nav_view_puntuacionesrecibida">Puntuaciones recibida</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
