<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hector.testloveapp.MenuPrincipal">
    <item android:id="@+id/pendientes"
        android:icon="@drawable/ic_priority_high_black_24dp"
        android:title="@string/actionBar_pendientes"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/agregarPregunta"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        android:title="@string/actionBar_agregarPregunta"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/eliminarPregunta"
        android:icon="@drawable/ic_delete_sweep_white_24dp"
        android:title="@string/actionBar_eliminarPregunta"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/eliminarContacto"
        android:title="@string/actionBar_eliminarContacto"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/opciones"
        android:title="@string/actionBar_opciones"
        android:orderInCategory="5"
        app:showAsAction="never"/>
    <item android:id="@+id/salir"
        android:title="@string/actionBar_salir"
        android:orderInCategory="6"
        app:showAsAction="never"/>
</menu>
